--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container">
         <img src="js.png" />
 
-        <h1>Javascript Achievements: JOUW NAAM HIER</h1>
+        <h1>Javascript Achievements: Joost Robat</h1>
 
         <a href="https://trello.com/b/xo5TJzFr/javascript-achievements" target="_blank" class="big-link">Overzicht alle beschikbare
             opdrachten</a>
@@ -41,7 +41,7 @@
         <h2>Les 1: FTP / Filezilla / Ma Cloud hosting</h3>
         <ul>
             <li><a href="voorbeeld-achievement/index.html">Voorbeeld achievement</a></li>
-            <li>Javascript Achievement</li>
+            <li><a href="http://30769.hosts1.ma-cloud.nl/index.html">Epic site.</a></li>
 
         </ul>
         <hr>
