Added checkerboard achievement to site.

--- a/Javascript-Achievements.html
+++ b/Javascript-Achievements.html
@@ -40,7 +40,7 @@
 
         <h2>Les 1: FTP / Filezilla / Ma Cloud hosting</h3>
         <ul>
-            <li><a href="voorbeeld-achievement/index.html">Voorbeeld achievement</a></li>
+            <li><a href="http://30769.hosts1.ma-cloud.nl/tabel.html">Checkerboard Achievement</a></li>
             <li><a href="http://30769.hosts1.ma-cloud.nl/index.html">Epic site.</a></li>
 
         </ul>
