--- a/Javascript-Achievements.html
+++ b/Javascript-Achievements.html
@@ -47,7 +47,7 @@
         <hr>
         <h2>Les 2: HTML5</h3>
         <ul>
-            <li>Javascript Achievement</li>
+            <li><a href="http://30769.hosts1.ma-cloud.nl/functions(rekenmachine).html">Rekenmachine van Joost</a></li>
             <li>Javascript Achievement</li>
             <li>...</li>
         </ul>
