Achievement site aangepast voor Make A Scene achievement en achievement toegevoegd.

--- a/Javascript-Achievements.html
+++ b/Javascript-Achievements.html
@@ -48,7 +48,7 @@
         <h2>Les 2: HTML5</h3>
         <ul>
             <li><a href="http://30769.hosts1.ma-cloud.nl/functions(rekenmachine).html">Rekenmachine van Joost</a></li>
-            <li>Javascript Achievement</li>
+            <li><a href="https://30769.hosts1.ma-cloud.nl/B2L3MakeAScene/">Make A Scene JS Achievement</a></li>
             <li>...</li>
         </ul>
         <hr>
