Javasciprt achievements site gewijzigt voor de turtle opdracht.

--- a/Javascript-Achievements.html
+++ b/Javascript-Achievements.html
@@ -42,7 +42,7 @@
         <ul>
             <li><a href="http://30769.hosts1.ma-cloud.nl/tabel.html">Checkerboard Achievement</a></li>
             <li><a href="http://30769.hosts1.ma-cloud.nl/index.html">Epic site.</a></li>
-            <li><a href="http://30769.hosts1.ma-cloud.nl/JS-Turtle/Demo.html">Mooie tekeling met turtle.</a></li>
+            <li><a href="http://30769.hosts1.ma-cloud.nl/javascript-turtle/Demo.html">Mooie tekeling met turtle.</a></li>
         </ul>
         <hr>
         <h2>Les 2: HTML5</h3>
