--- a/Javascript-Achievements.html
+++ b/Javascript-Achievements.html
@@ -40,7 +40,6 @@
 
         <h2>Les 1: FTP / Filezilla / Ma Cloud hosting</h3>
         <ul>
-            <li><a href="http://30769.hosts1.ma-cloud.nl/tabel.html">Checkerboard Achievement</a></li>
             <li><a href="http://30769.hosts1.ma-cloud.nl/index.html">Epic site.</a></li>
             <li><a href="http://30769.hosts1.ma-cloud.nl/javascript-turtle/Demo.html">Mooie tekeling met turtle.</a></li>
         </ul>
@@ -48,13 +47,13 @@
         <h2>Les 2: HTML5</h3>
         <ul>
             <li><a href="http://30769.hosts1.ma-cloud.nl/functions(rekenmachine).html">Rekenmachine van Joost</a></li>
-            <li><a href="https://30769.hosts1.ma-cloud.nl/B2L3MakeAScene/">Make A Scene JS Achievement</a></li>
             <li><a href="http://30769.hosts1.ma-cloud.nl/Text_to_speech/">Text to speech site</a></li>
+            <li><a href="http://30769.hosts1.ma-cloud.nl/tabel.html">Checkerboard Achievement.</a></li>
         </ul>
         <hr>
         <h2>Les 3: Les 3 JS Date</h3>
         <ul>
-            <li>Javascript Achievement</li>
+            <li><a href="https://30769.hosts1.ma-cloud.nl/B2L3MakeAScene/">Make A Scene JS Achievement</a></li>
             <li>Javascript Achievement</li>
             <li>...</li>
         </ul>
