Text t speech toegevoegd aan javascript achievements site.

--- a/Javascript-Achievements.html
+++ b/Javascript-Achievements.html
@@ -54,7 +54,7 @@
         <h2>Les 3: Les 3 JS Date</h3>
         <ul>
             <li><a href="https://30769.hosts1.ma-cloud.nl/B2L3MakeAScene/">Make A Scene JS Achievement</a></li>
-            <li>Javascript Achievement</li>
+            <li><a href="https://30769.hosts1.ma-cloud.nl/Text-to-speech/index.html">Text to speech Generator.</a></li>
             <li>...</li>
         </ul>
         <hr>
