--- a/Javascript-Achievements.html
+++ b/Javascript-Achievements.html
@@ -49,7 +49,7 @@
         <ul>
             <li><a href="http://30769.hosts1.ma-cloud.nl/functions(rekenmachine).html">Rekenmachine van Joost</a></li>
             <li><a href="https://30769.hosts1.ma-cloud.nl/B2L3MakeAScene/">Make A Scene JS Achievement</a></li>
-            <li><a href"http://30769.hosts1.ma-cloud.nl/Text_to_speech/">Text to speech site</a></li>
+            <li><a href="http://30769.hosts1.ma-cloud.nl/Text%20to%20speech/index.html">Text to speech site</a></li>
         </ul>
         <hr>
         <h2>Les 3: Les 3 JS Date</h3>
