--- a/Javascript-Achievements.html
+++ b/Javascript-Achievements.html
@@ -74,7 +74,7 @@
         <hr>
         <h2>Les 6: Modulo</h3>
         <ul>
-            <li>Javascript Achievement</li>
+            <li><a href="https://30769.hosts1.ma-cloud.nl/F1M2JS-Rotation-Sensor/sensors.html">Text to speech API controlled</a></li>
             <li>Javascript Achievement</li>
             <li>...</li>
         </ul>
