Opdrachten toegevoegd: Scroll on me, webxr demo, API controlled website.

--- a/Javascript-Achievements.html
+++ b/Javascript-Achievements.html
@@ -60,14 +60,14 @@
         <hr>
         <h2>Les 4: Document Object Model (DOM)</h3>
         <ul>
-            <li>Javascript Achievement</li>
+            <li><a href="https://30769.hosts1.ma-cloud.nl/ma-webxr">WebXR Demo</a></li>
             <li>Javascript Achievement</li>
             <li>...</li>
         </ul>
         <hr>
         <h2>Les 5: Functions / Events</h3>
         <ul>
-            <li>Javascript Achievement</li>
+            <li><a href="https://30769.hosts1.ma-cloud.nl/scroll_on_me">Scroll On Me</a></li>
             <li>Javascript Achievement</li>
             <li>...</li>
         </ul>
