--- a/F1M2JS-Rotation-Sensor/sensors.html
+++ b/F1M2JS-Rotation-Sensor/sensors.html
@@ -22,7 +22,7 @@
                <li>gamma left-right:<span id="gamma" >...</span></li>
                <li>alpha Z-axis:   <span id="alpha" >...</span></li>
                <li><span id="voice"></span></li>
-               <li><img id="myImage"></li>
+               <li><img id="myImage" style="width: 50%; height: 50%;"></li>
                <li><span id="msg"></span></li>
             </ul>
          </div>
