--- a/Javascript-Achievements.html
+++ b/Javascript-Achievements.html
@@ -40,42 +40,42 @@
 
         <h2>Les 1: FTP / Filezilla / Ma Cloud hosting</h3>
         <ul>
-            <li><a href="http://30769.hosts1.ma-cloud.nl/index.html">Epic site.</a></li>
-            <li><a href="http://30769.hosts1.ma-cloud.nl/javascript-turtle/Demo.html">Mooie tekeling met turtle.</a></li>
+            <li><a href="http://30769.hosts1.ma-cloud.nl/index.html" target="_blank">Epic site.</a></li>
+            <li><a href="http://30769.hosts1.ma-cloud.nl/javascript-turtle/Demo.html" target="_blank">Mooie tekeling met turtle.</a></li>
         </ul>
         <hr>
         <h2>Les 2: HTML5</h3>
         <ul>
-            <li><a href="http://30769.hosts1.ma-cloud.nl/functions(rekenmachine).html">Rekenmachine van Joost</a></li>
-            <li><a href="https://30769.hosts1.ma-cloud.nl/B2L3MakeAScene/">Make A Scene JS Achievement</a></li>
-            <li><a href="http://30769.hosts1.ma-cloud.nl/Text%20to%20speech/index.html">Text to speech site</a></li>
+            <li><a href="http://30769.hosts1.ma-cloud.nl/functions(rekenmachine).html" target="_blank">Rekenmachine van Joost</a></li>
+            <li><a href="https://30769.hosts1.ma-cloud.nl/B2L3MakeAScene/" target="_blank">Make A Scene JS Achievement</a></li>
+            <li><a href="http://30769.hosts1.ma-cloud.nl/Text%20to%20speech/index.html" target="_blank">Text to speech site</a></li>
         </ul>
         <hr>
         <h2>Les 3: Les 3 JS Date</h3>
         <ul>
-            <li><a href="https://30769.hosts1.ma-cloud.nl/B2L3MakeAScene/">Make A Scene JS Achievement</a></li>
-            <li><a href="https://30769.hosts1.ma-cloud.nl/Text-to-speech/index.html">Text to speech Generator.</a></li>
+            <li><a href="https://30769.hosts1.ma-cloud.nl/B2L3MakeAScene/" target="_blank">Make A Scene JS Achievement</a></li>
+            <li><a href="https://30769.hosts1.ma-cloud.nl/Text-to-speech/index.html" target="_blank">Text to speech Generator.</a></li>
             <li>...</li>
         </ul>
         <hr>
         <h2>Les 4: Document Object Model (DOM)</h3>
         <ul>
-            <li><a href="https://30769.hosts1.ma-cloud.nl/ma-webxr">WebXR Demo</a></li>
+            <li><a href="https://30769.hosts1.ma-cloud.nl/ma-webxr" target="_blank">WebXR Demo</a></li>
             <li>Javascript Achievement</li>
             <li>...</li>
         </ul>
         <hr>
         <h2>Les 5: Functions / Events</h3>
         <ul>
-            <li><a href="https://30769.hosts1.ma-cloud.nl/scroll_on_me">Scroll On Me</a></li>
+            <li><a href="https://30769.hosts1.ma-cloud.nl/scroll_on_me" target="_blank">Scroll On Me</a></li>
             <li>Javascript Achievement</li>
             <li>...</li>
         </ul>
         <hr>
         <h2>Les 6: Modulo</h3>
         <ul>
-            <li><a href="https://30769.hosts1.ma-cloud.nl/F1M2JS-Rotation-Sensor/sensors.html">Text to speech API controlled</a></li>
-            <li>Javascript Achievement</li>
+            <li><a href="https://30769.hosts1.ma-cloud.nl/F1M2JS-Rotation-Sensor/sensors.html" target="_blank">Text to speech API controlled</a></li>
+            <li><a href="https://30769.hosts1.ma-cloud.nl/to-do-list">To Do List</a></li>
             <li>...</li>
         </ul>
     </div>
