Javascript quiz online gezet.

--- a/Javascript-Achievements.html
+++ b/Javascript-Achievements.html
@@ -68,7 +68,7 @@
         <h2>Les 5: Functions / Events</h3>
         <ul>
             <li><a href="https://30769.hosts1.ma-cloud.nl/scroll_on_me" target="_blank">Scroll On Me</a></li>
-            <li>Javascript Achievement</li>
+            <li><a href="https://30769.hosts1.ma-cloud.nl/F1M2BO-Quiz-Javascript">Mijn Quiz</a></li>
             <li>...</li>
         </ul>
         <hr>
